v1.16.0 (#297)
Features

* #243 - Create endpoint to access attribute allowed values: GET /attributes/{key}/allowedValues

* #246 - Added User Properties to POST /users, GET /users/:username

* #250 - Add Document Action for "Amazon EventBridge"

* #260 - Add ability to add Relationships between documents via attributes

* #265 - Add Checksum CRC-32, CR-32C, SHA-1, SHA-256 options when adding documents

* #266 - Added ability to POST /search for searching by documentId

* #270 - Add "Govern" permission, role to manage documents

* #269 - Added GET /folders?path={folderPath} to retrieve a folder index key based on the path

* #278 - Add SOFT_DELETE document event

Updates

* #257 - Added AppEnvironment to GET /version

* #283 - Add Point in time Recory for Documentsyncs table

* Updated console to 3.7.1

* Improved performance when using POST /search with long list of return attributes

Bugs Fixes

* #256 - POST /documents & Patch /documents/{documentId} doesn't post actions when using deeplink actions

* #259 - Deep link for OneDrive not passing URL validation

* #262 - POST /groups - Added 400 response on invalid characters in group names

* #236 - Added Error when attempting to remove an attribute that is listed in a site or classification scheme

* #264 - PATCH /documents with required siteschema attribute

* #268 - Document Path starting with "." creates folder with "." name

* #271 - POST /documents: range keys has exceeded the size limit of 1024 bytes

* #272 - Prevent double slashes in path for documents

* #275  - Site Schema: Add Document causes NullPointerException

* #282 - Patching documents in parallel to change their folder makes some disappear

* #284 - POST /search selects wrong Composite Key index

* #285 - 500 error on "data" when updating and deleting attributes

* #288 - 500 Internal Server Error on POST /search

* #290 - 500 Internal Server Error on Attribute-based POST /search

* #291 