@@ -31,6 +31,7 @@ import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertNull;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.junit.jupiter.api.Assertions.fail;
+
 import java.nio.charset.StandardCharsets;
 import java.text.SimpleDateFormat;
 import java.time.ZonedDateTime;
@@ -42,7 +43,11 @@ import java.util.Date;
 import java.util.List;
 import java.util.Map;
 import java.util.TimeZone;
-import java.util.UUID;
+
+import com.formkiq.aws.dynamodb.ApiAuthorization;
+import com.formkiq.aws.dynamodb.DbKeys;
+import com.formkiq.aws.dynamodb.ID;
+import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -65,14 +70,22 @@ import com.formkiq.validation.ValidationException;
 
 /** Unit Tests for {@link DocumentSearchServiceImpl}. */
 @ExtendWith(DynamoDbExtension.class)
-public class DocumentSearchServiceImplTest {
+public class DocumentSearchServiceImplTest implements DbKeys {
 
   /** {@link SimpleDateFormat}. */
-  private SimpleDateFormat df = new SimpleDateFormat("yyyy-MM-dd'T'HH:mm:ss");
+  private final SimpleDateFormat df = new SimpleDateFormat("yyyy-MM-dd'T'HH:mm:ss");
   /** {@link DocumentService}. */
   private DocumentSearchService searchService;
   /** {@link DocumentService}. */
   private DocumentService service;
+
+  /**
+   * Before All.
+   */
+  @BeforeAll
+  public static void beforeAll() {
+    ApiAuthorization.login(new ApiAuthorization().username("System"));
+  }
 
   /**
    * Before Test.
@@ -87,7 +100,7 @@ public class DocumentSearchServiceImplTest {
     this.service = new DocumentServiceImpl(dynamoDbConnection, DOCUMENTS_TABLE,
         new DocumentVersionServiceNoVersioning());
     this.searchService =
-        new DocumentSearchServiceImpl(dynamoDbConnection, this.service, DOCUMENTS_TABLE, null);
+        new DocumentSearchServiceImpl(dynamoDbConnection, this.service, DOCUMENTS_TABLE);
   }
 
   /**
@@ -102,9 +115,9 @@ public class DocumentSearchServiceImplTest {
   private String createDocument(final String siteId, final String tagKey, final String tagValue)
       throws ValidationException {
     ZonedDateTime now = ZonedDateTime.now();
-    DocumentItem doc = createDocument(UUID.randomUUID().toString(), now, "text/plain", "test.txt");
-    Collection<DocumentTag> tags = Arrays
-        .asList(new DocumentTag(doc.getDocumentId(), tagKey, tagValue, new Date(), "testuser"));
+    DocumentItem doc = createDocument(ID.uuid(), now);
+    Collection<DocumentTag> tags =
+        List.of(new DocumentTag(doc.getDocumentId(), tagKey, tagValue, new Date(), "testuser"));
     this.service.saveDocument(siteId, doc, tags);
 
     return doc.getDocumentId();
@@ -115,21 +128,18 @@ public class DocumentSearchServiceImplTest {
    *
    * @param uuid {@link String}
    * @param date {@link ZonedDateTime}
-   * @param contentType {@link String}
-   * @param path {@link String}
    * @return {@link DocumentItem}
    */
-  private DocumentItem createDocument(final String uuid, final ZonedDateTime date,
-      final String contentType, final String path) {
+  private DocumentItem createDocument(final String uuid, final ZonedDateTime date) {
 
     String userId = "jsmith";
 
     DocumentItem item = new DocumentItemDynamoDb(uuid, Date.from(date.toInstant()), userId);
-    item.setContentType(contentType);
-    item.setPath(path);
-    item.setUserId(UUID.randomUUID().toString());
-    item.setChecksum(UUID.randomUUID().toString());
-    item.setContentLength(Long.valueOf(2));
+    item.setContentType("text/plain");
+    item.setPath("test.txt");
+    item.setUserId(ID.uuid());
+    item.setChecksum(ID.uuid());
+    item.setContentLength(2L);
     return item;
   }
 
@@ -152,12 +162,13 @@ public class DocumentSearchServiceImplTest {
 
     dates.forEach(date -> {
       ZonedDateTime zdate = DateUtil.toDateTimeFromString(date, null);
-      items.add(createDocument(UUID.randomUUID().toString(), zdate, "text/plain", "test.txt"));
+      String id = ID.uuid();
+      items.add(createDocument(id, zdate));
     });
 
     items.forEach(item -> {
-      Collection<DocumentTag> tags = Arrays.asList(
-          new DocumentTag(item.getDocumentId(), "status", "active", new Date(), "testuser"));
+      Collection<DocumentTag> tags = List
+          .of(new DocumentTag(item.getDocumentId(), "status", "active", new Date(), "testuser"));
       try {
         this.service.saveDocument(prefix, item, tags);
       } catch (ValidationException e) {
@@ -178,10 +189,10 @@ public class DocumentSearchServiceImplTest {
   private DynamicDocumentItem createTestDocumentWithTags(final Map<String, Object> tags,
       final boolean value) {
     String username = "testuser";
-    String content = UUID.randomUUID().toString();
-    DynamicDocumentItem doc = new DynamicDocumentItem(Map.of("documentId",
-        UUID.randomUUID().toString(), "userId", username, "insertedDate", new Date(), "content",
-        Base64.getEncoder().encodeToString(content.getBytes(StandardCharsets.UTF_8))));
+    String content = ID.uuid();
+    DynamicDocumentItem doc = new DynamicDocumentItem(
+        Map.of("documentId", ID.uuid(), "userId", username, "insertedDate", new Date(), "content",
+            Base64.getEncoder().encodeToString(content.getBytes(StandardCharsets.UTF_8))));
 
 
     List<Map<String, Object>> list = new ArrayList<>();
@@ -209,20 +220,19 @@ public class DocumentSearchServiceImplTest {
    */
   @Test
   public void testSearch01() throws ValidationException {
-    for (String prefix : Arrays.asList(null, UUID.randomUUID().toString())) {
+    for (String prefix : Arrays.asList(null, ID.uuid())) {
       // given
       createTestData("finance");
       createTestData(prefix);
       String tagKey = "status";
       String tagValue = "active";
-      PaginationMapToken startkey = null;
       SearchTagCriteria c = new SearchTagCriteria(tagKey);
       c.eq(tagValue);
       SearchQuery q = new SearchQuery().tag(c);
 
       // when
       PaginationResults<DynamicDocumentItem> results =
-          this.searchService.search(prefix, q, null, startkey, MAX_RESULTS);
+          this.searchService.search(prefix, q, null, null, MAX_RESULTS);
 
       // then
       assertEquals(MAX_RESULTS, results.getResults().size());
@@ -248,19 +258,18 @@ public class DocumentSearchServiceImplTest {
    */
   @Test
   public void testSearch02() throws ValidationException {
-    for (String prefix : Arrays.asList(null, UUID.randomUUID().toString())) {
+    for (String prefix : Arrays.asList(null, ID.uuid())) {
       // given
       createTestData(prefix);
       String tagKey = "day";
       String tagValue = "today2";
-      PaginationMapToken startkey = null;
       SearchTagCriteria c = new SearchTagCriteria(tagKey);
       c.eq(tagValue);
       SearchQuery q = new SearchQuery().tag(c);
 
       // when
       PaginationResults<DynamicDocumentItem> results =
-          this.searchService.search(prefix, q, null, startkey, MAX_RESULTS);
+          this.searchService.search(prefix, q, null, null, MAX_RESULTS);
 
       // then
       assertEquals(0, results.getResults().size());
@@ -275,18 +284,17 @@ public class DocumentSearchServiceImplTest {
    */
   @Test
   public void testSearch03() throws ValidationException {
-    for (String prefix : Arrays.asList(null, UUID.randomUUID().toString())) {
+    for (String prefix : Arrays.asList(null, ID.uuid())) {
       // given
       createTestData(prefix);
       createTestData("finance");
       String tagKey = "status";
-      PaginationMapToken startkey = null;
       SearchTagCriteria c = new SearchTagCriteria(tagKey).beginsWith("a");
       SearchQuery q = new SearchQuery().tag(c);
 
       // when
       PaginationResults<DynamicDocumentItem> results =
-          this.searchService.search(prefix, q, null, startkey, MAX_RESULTS);
+          this.searchService.search(prefix, q, null, null, MAX_RESULTS);
 
       // then
       assertEquals(MAX_RESULTS, results.getResults().size());
@@ -310,7 +318,7 @@ public class DocumentSearchServiceImplTest {
    */
   @Test
   public void testSearch04() throws ValidationException {
-    for (String prefix : Arrays.asList(null, UUID.randomUUID().toString())) {
+    for (String prefix : Arrays.asList(null, ID.uuid())) {
       // given
       createTestData("finance");
       createTestData(prefix);
@@ -318,21 +326,20 @@ public class DocumentSearchServiceImplTest {
       int limit = 1;
       String tagKey = "status";
       String tagValue = "active";
-      PaginationMapToken startkey = null;
       SearchTagCriteria c = new SearchTagCriteria(tagKey);
       c.eq(tagValue);
       SearchQuery q = new SearchQuery().tag(c);
 
       // when
       PaginationResults<DynamicDocumentItem> results =
-          this.searchService.search(prefix, q, null, startkey, limit);
+          this.searchService.search(prefix, q, null, null, limit);
 
       // then
       assertEquals(1, results.getResults().size());
       assertNotNull(results.getToken());
 
       // given
-      startkey = results.getToken();
+      PaginationMapToken startkey = results.getToken();
 
       // when
       PaginationResults<DynamicDocumentItem> results2 =
@@ -354,26 +361,25 @@ public class DocumentSearchServiceImplTest {
    */
   @Test
   public void testSearch05() throws ValidationException {
-    for (String siteId : Arrays.asList(null, UUID.randomUUID().toString())) {
+    for (String siteId : Arrays.asList(null, ID.uuid())) {
       // given
       createTestData("finance");
       List<DocumentItem> items = createTestData(siteId);
       DocumentItem item = items.get(0);
       DocumentTag tag =
           new DocumentTag(item.getDocumentId(), "status", null, new Date(), "testuser")
-              .setValues(Arrays.asList("active", "notactive"));
-      this.service.saveDocument(siteId, item, Arrays.asList(tag));
+              .setValues(List.of("active", "notactive"));
+      this.service.saveDocument(siteId, item, List.of(tag));
 
       String tagKey = "status";
       String tagValue = "notactive";
-      PaginationMapToken startkey = null;
       SearchTagCriteria c = new SearchTagCriteria(tagKey);
       c.eq(tagValue);
       SearchQuery q = new SearchQuery().tag(c);
 
       // when
       PaginationResults<DynamicDocumentItem> results =
-          this.searchService.search(siteId, q, null, startkey, MAX_RESULTS);
+          this.searchService.search(siteId, q, null, null, MAX_RESULTS);
 
       // then
       assertEquals(1, results.getResults().size());
@@ -397,7 +403,7 @@ public class DocumentSearchServiceImplTest {
    */
   @Test
   public void testSearch06() throws ValidationException {
-    for (String siteId : Arrays.asList(null, UUID.randomUUID().toString())) {
+    for (String siteId : Arrays.asList(null, ID.uuid())) {
       // given
       DynamicDocumentItem doc0 = createTestDocumentWithTags(Map.of("category", "person"), true);
       DynamicDocumentItem doc1 = createTestDocumentWithTags(Map.of("category", "thing"), true);
@@ -411,11 +417,9 @@ public class DocumentSearchServiceImplTest {
       q.documentsIds(
           Arrays.asList(doc0.getDocumentId(), doc1.getDocumentId(), doc2.getDocumentId()));
 
-      PaginationMapToken startkey = null;
-
       // when - wrong document id
       PaginationResults<DynamicDocumentItem> results =
-          this.searchService.search(siteId, q, null, startkey, MAX_RESULTS);
+          this.searchService.search(siteId, q, null, null, MAX_RESULTS);
 
       // then
       assertEquals(1, results.getResults().size());
@@ -436,16 +440,16 @@ public class DocumentSearchServiceImplTest {
       q = new SearchQuery().tag(new SearchTagCriteria("nocategory"));
 
       // when
-      results = this.searchService.search(siteId, q, null, startkey, MAX_RESULTS);
+      results = this.searchService.search(siteId, q, null, null, MAX_RESULTS);
 
       // then
       assertEquals(1, results.getResults().size());
       assertEquals(doc2.getDocumentId(), results.getResults().get(0).getDocumentId());
 
       // given
-      q.documentsIds(Arrays.asList("123"));
+      q.documentsIds(List.of("123"));
       // when
-      results = this.searchService.search(siteId, q, null, startkey, MAX_RESULTS);
+      results = this.searchService.search(siteId, q, null, null, MAX_RESULTS);
       // then
       assertEquals(0, results.getResults().size());
     }
@@ -458,9 +462,8 @@ public class DocumentSearchServiceImplTest {
    */
   @Test
   public void testSearch07() throws ValidationException {
-    for (String siteId : Arrays.asList(null, UUID.randomUUID().toString())) {
+    for (String siteId : Arrays.asList(null, ID.uuid())) {
       // given - tag only
-      PaginationMapToken startkey = null;
       SearchTagCriteria c = new SearchTagCriteria("category");
       SearchQuery q = new SearchQuery().tag(c);
 
@@ -473,7 +476,7 @@ public class DocumentSearchServiceImplTest {
 
       // when
       PaginationResults<DynamicDocumentItem> results =
-          this.searchService.search(siteId, q, null, startkey, MAX_RESULTS);
+          this.searchService.search(siteId, q, null, null, MAX_RESULTS);
       // then
       assertEquals(2, results.getResults().size());
 
@@ -497,9 +500,8 @@ public class DocumentSearchServiceImplTest {
    */
   @Test
   public void testSearch08() throws ValidationException {
-    for (String siteId : Arrays.asList(null, UUID.randomUUID().toString())) {
+    for (String siteId : Arrays.asList(null, ID.uuid())) {
       // given - wrong value
-      PaginationMapToken startkey = null;
       SearchTagCriteria c = new SearchTagCriteria("category").eq("thing123");
       SearchQuery q = new SearchQuery().tag(c);
 
@@ -512,7 +514,7 @@ public class DocumentSearchServiceImplTest {
 
       // when
       PaginationResults<DynamicDocumentItem> results =
-          this.searchService.search(siteId, q, null, startkey, MAX_RESULTS);
+          this.searchService.search(siteId, q, null, null, MAX_RESULTS);
       // then
       assertEquals(0, results.getResults().size());
     }
@@ -525,7 +527,7 @@ public class DocumentSearchServiceImplTest {
    */
   @Test
   public void testSearch09() throws ValidationException {
-    for (String siteId : Arrays.asList(null, UUID.randomUUID().toString())) {
+    for (String siteId : Arrays.asList(null, ID.uuid())) {
       // given
       DynamicDocumentItem doc0 = createTestDocumentWithTags(Map.of("category", "person"), true);
       DynamicDocumentItem doc1 = createTestDocumentWithTags(Map.of("category", "thing"), true);
@@ -538,11 +540,9 @@ public class DocumentSearchServiceImplTest {
       SearchQuery q = new SearchQuery().tag(c);
       q.documentsIds(Arrays.asList(doc0.getDocumentId(), doc1.getDocumentId()));
 
-      PaginationMapToken startkey = null;
-
       // when - wrong document id
       PaginationResults<DynamicDocumentItem> results =
-          this.searchService.search(siteId, q, null, startkey, MAX_RESULTS);
+          this.searchService.search(siteId, q, null, null, MAX_RESULTS);
 
       // then
       assertEquals(1, results.getResults().size());
@@ -569,7 +569,6 @@ public class DocumentSearchServiceImplTest {
   @Test
   public void testSearch10() throws ValidationException {
     // given
-    String siteId = null;
     final int count = 100;
     SearchTagCriteria c = new SearchTagCriteria("category");
     SearchQuery q = new SearchQuery().tag(c);
@@ -578,16 +577,14 @@ public class DocumentSearchServiceImplTest {
     for (int i = 0; i < count; i++) {
       DynamicDocumentItem doc = createTestDocumentWithTags(Map.of("category", "person_" + i), true);
       docNumbers.add(doc.getDocumentId());
-      this.service.saveDocumentItemWithTag(siteId, doc);
+      this.service.saveDocumentItemWithTag(null, doc);
     }
 
     q.documentsIds(docNumbers);
 
-    PaginationMapToken startkey = null;
-
     // when - wrong document id
     PaginationResults<DynamicDocumentItem> results =
-        this.searchService.search(siteId, q, null, startkey, MAX_RESULTS);
+        this.searchService.search(null, q, null, null, MAX_RESULTS);
 
     // then
     assertEquals(count, results.getResults().size());
@@ -600,7 +597,7 @@ public class DocumentSearchServiceImplTest {
    */
   @Test
   public void testSearch11() throws ValidationException {
-    for (String siteId : Arrays.asList(null, UUID.randomUUID().toString())) {
+    for (String siteId : Arrays.asList(null, ID.uuid())) {
       // given
       DynamicDocumentItem doc0 = createTestDocumentWithTags(Map.of("category", "person"), true);
       DynamicDocumentItem doc1 =
@@ -615,11 +612,9 @@ public class DocumentSearchServiceImplTest {
       q.documentsIds(
           Arrays.asList(doc0.getDocumentId(), doc1.getDocumentId(), doc2.getDocumentId()));
 
-      PaginationMapToken startkey = null;
-
       // when - wrong document id
       PaginationResults<DynamicDocumentItem> results =
-          this.searchService.search(siteId, q, null, startkey, MAX_RESULTS);
+          this.searchService.search(siteId, q, null, null, MAX_RESULTS);
 
       // then
       assertEquals(1, results.getResults().size());
@@ -637,9 +632,9 @@ public class DocumentSearchServiceImplTest {
       });
 
       // given
-      q.documentsIds(Arrays.asList("123"));
+      q.documentsIds(List.of("123"));
       // when
-      results = this.searchService.search(siteId, q, null, startkey, MAX_RESULTS);
+      results = this.searchService.search(siteId, q, null, null, MAX_RESULTS);
       // then
       assertEquals(0, results.getResults().size());
     }
@@ -652,7 +647,7 @@ public class DocumentSearchServiceImplTest {
    */
   @Test
   public void testSearch12() throws ValidationException {
-    for (String siteId : Arrays.asList(null, UUID.randomUUID().toString())) {
+    for (String siteId : Arrays.asList(null, ID.uuid())) {
       // given
       DynamicDocumentItem doc0 = createTestDocumentWithTags(Map.of("category", "person"), true);
       doc0.setDocumentId("1");
@@ -678,11 +673,9 @@ public class DocumentSearchServiceImplTest {
       q.documentsIds(Arrays.asList(doc0.getDocumentId(), doc1.getDocumentId(), doc2.getDocumentId(),
           doc3.getDocumentId()));
 
-      PaginationMapToken startkey = null;
-
       // when - wrong document id
       PaginationResults<DynamicDocumentItem> results =
-          this.searchService.search(siteId, q, null, startkey, MAX_RESULTS);
+          this.searchService.search(siteId, q, null, null, MAX_RESULTS);
 
       // then
       List<DynamicDocumentItem> list = results.getResults();
@@ -706,9 +699,9 @@ public class DocumentSearchServiceImplTest {
       });
 
       // given
-      q.documentsIds(Arrays.asList("123"));
+      q.documentsIds(List.of("123"));
       // when
-      results = this.searchService.search(siteId, q, null, startkey, MAX_RESULTS);
+      results = this.searchService.search(siteId, q, null, null, MAX_RESULTS);
       // then
       list = results.getResults();
       assertEquals(0, list.size());
@@ -722,7 +715,7 @@ public class DocumentSearchServiceImplTest {
    */
   @Test
   public void testSearch13() throws ValidationException {
-    for (String siteId : Arrays.asList(null, UUID.randomUUID().toString())) {
+    for (String siteId : Arrays.asList(null, ID.uuid())) {
       // given
       DynamicDocumentItem doc0 = createTestDocumentWithTags(Map.of("category", "person"), true);
       DynamicDocumentItem doc1 = createTestDocumentWithTags(Map.of("category", "thing"), true);
@@ -737,11 +730,9 @@ public class DocumentSearchServiceImplTest {
           new SearchTagCriteria("category").eqOr(Arrays.asList("thing", "person1"));
       SearchQuery q = new SearchQuery().tag(c);
 
-      PaginationMapToken startkey = null;
-
       // when - wrong document id
       PaginationResults<DynamicDocumentItem> results =
-          this.searchService.search(siteId, q, null, startkey, MAX_RESULTS);
+          this.searchService.search(siteId, q, null, null, MAX_RESULTS);
 
       // then
       List<DynamicDocumentItem> list = results.getResults();
@@ -770,31 +761,30 @@ public class DocumentSearchServiceImplTest {
    */
   @Test
   public void testSearch14() throws ValidationException {
-    for (String siteId : Arrays.asList(null, UUID.randomUUID().toString())) {
+    for (String siteId : Arrays.asList(null, ID.uuid())) {
       // given
-      DocumentItem doc0 = new DocumentItemDynamoDb(UUID.randomUUID().toString(), new Date(), "joe");
+      DocumentItem doc0 = new DocumentItemDynamoDb(ID.uuid(), new Date(), "joe");
       doc0.setPath("test2.pdf");
       this.service.saveDocument(siteId, doc0, null);
 
-      DocumentItem doc1 = new DocumentItemDynamoDb(UUID.randomUUID().toString(), new Date(), "joe");
+      DocumentItem doc1 = new DocumentItemDynamoDb(ID.uuid(), new Date(), "joe");
       doc1.setPath("test1.pdf");
       this.service.saveDocument(siteId, doc1, null);
 
-      DocumentItem doc2 = new DocumentItemDynamoDb(UUID.randomUUID().toString(), new Date(), "joe");
+      DocumentItem doc2 = new DocumentItemDynamoDb(ID.uuid(), new Date(), "joe");
       doc2.setPath("sample/test3.pdf");
       this.service.saveDocument(siteId, doc2, null);
 
-      DocumentItem doc3 = new DocumentItemDynamoDb(UUID.randomUUID().toString(), new Date(), "joe");
+      DocumentItem doc3 = new DocumentItemDynamoDb(ID.uuid(), new Date(), "joe");
       doc3.setPath("sample/anotherone/test4.pdf");
       this.service.saveDocument(siteId, doc3, null);
 
-      PaginationMapToken startkey = null;
       String folder = "";
       SearchQuery q = new SearchQuery().meta(new SearchMetaCriteria().folder(folder));
 
       // when
       PaginationResults<DynamicDocumentItem> results =
-          this.searchService.search(siteId, q, null, startkey, MAX_RESULTS);
+          this.searchService.search(siteId, q, null, null, MAX_RESULTS);
 
       // then
       final int expected = 3;
@@ -808,14 +798,14 @@ public class DocumentSearchServiceImplTest {
       assertEquals(doc1.getDocumentId(), results.getResults().get(i).getDocumentId());
       assertEquals("test1.pdf", list.get(i++).getPath());
       assertEquals(doc0.getDocumentId(), results.getResults().get(i).getDocumentId());
-      assertEquals("test2.pdf", list.get(i++).getPath());
+      assertEquals("test2.pdf", list.get(i).getPath());
 
       // given
       folder = "sample";
       q = new SearchQuery().meta(new SearchMetaCriteria().folder(folder));
 
       // when
-      results = this.searchService.search(siteId, q, null, startkey, MAX_RESULTS);
+      results = this.searchService.search(siteId, q, null, null, MAX_RESULTS);
 
       // then
       list = results.getResults();
@@ -830,7 +820,7 @@ public class DocumentSearchServiceImplTest {
       q = new SearchQuery().meta(new SearchMetaCriteria().folder(folder));
 
       // when
-      results = this.searchService.search(siteId, q, null, startkey, MAX_RESULTS);
+      results = this.searchService.search(siteId, q, null, null, MAX_RESULTS);
 
       // then
       list = results.getResults();
@@ -847,22 +837,21 @@ public class DocumentSearchServiceImplTest {
    */
   @Test
   public void testSearch15() throws ValidationException {
-    for (String siteId : Arrays.asList(null, UUID.randomUUID().toString())) {
+    for (String siteId : Arrays.asList(null, ID.uuid())) {
       // given
-      DocumentItem doc0 = new DocumentItemDynamoDb(UUID.randomUUID().toString(), new Date(), "joe");
+      DocumentItem doc0 = new DocumentItemDynamoDb(ID.uuid(), new Date(), "joe");
       doc0.setPath("sample/test2.pdf");
       this.service.saveDocument(siteId, doc0, null);
 
-      PaginationMapToken startkey = null;
       SearchQuery q0 = new SearchQuery().meta(new SearchMetaCriteria().folder(""));
       SearchQuery q1 = new SearchQuery().meta(new SearchMetaCriteria().folder("sample"));
 
       // when
       PaginationResults<DynamicDocumentItem> results0 =
-          this.searchService.search(siteId, q0, null, startkey, MAX_RESULTS);
+          this.searchService.search(siteId, q0, null, null, MAX_RESULTS);
 
       PaginationResults<DynamicDocumentItem> results1 =
-          this.searchService.search(siteId, q1, null, startkey, MAX_RESULTS);
+          this.searchService.search(siteId, q1, null, null, MAX_RESULTS);
 
       // then
       List<DynamicDocumentItem> list0 = results0.getResults();
@@ -881,12 +870,12 @@ public class DocumentSearchServiceImplTest {
       this.service.deleteDocument(siteId, doc0.getDocumentId(), false);
 
       // then
-      results0 = this.searchService.search(siteId, q0, null, startkey, MAX_RESULTS);
+      results0 = this.searchService.search(siteId, q0, null, null, MAX_RESULTS);
       list0 = results0.getResults();
       assertEquals(1, list0.size());
       assertEquals("sample", list0.get(0).getPath());
 
-      results1 = this.searchService.search(siteId, q1, null, startkey, MAX_RESULTS);
+      results1 = this.searchService.search(siteId, q1, null, null, MAX_RESULTS);
       assertEquals(0, results1.getResults().size());
     }
   }
@@ -898,27 +887,26 @@ public class DocumentSearchServiceImplTest {
    */
   @Test
   public void testSearch16() throws ValidationException {
-    for (String siteId : Arrays.asList(null, UUID.randomUUID().toString())) {
+    for (String siteId : Arrays.asList(null, ID.uuid())) {
       // given
-      DocumentItem doc0 = new DocumentItemDynamoDb(UUID.randomUUID().toString(), new Date(), "joe");
+      DocumentItem doc0 = new DocumentItemDynamoDb(ID.uuid(), new Date(), "joe");
       doc0.setPath("Chicago/test2.pdf");
       this.service.saveDocument(siteId, doc0, null);
 
-      DocumentItem doc1 = new DocumentItemDynamoDb(UUID.randomUUID().toString(), new Date(), "joe");
+      DocumentItem doc1 = new DocumentItemDynamoDb(ID.uuid(), new Date(), "joe");
       doc1.setPath("abc.pdf");
       this.service.saveDocument(siteId, doc1, null);
 
-      DocumentItem doc2 = new DocumentItemDynamoDb(UUID.randomUUID().toString(), new Date(), "joe");
+      DocumentItem doc2 = new DocumentItemDynamoDb(ID.uuid(), new Date(), "joe");
       doc2.setPath("aaaa/test3.pdf");
       this.service.saveDocument(siteId, doc2, null);
 
-      PaginationMapToken startkey = null;
       String folder = "";
       SearchQuery q = new SearchQuery().meta(new SearchMetaCriteria().folder(folder));
 
       // when
       PaginationResults<DynamicDocumentItem> results =
-          this.searchService.search(siteId, q, null, startkey, MAX_RESULTS);
+          this.searchService.search(siteId, q, null, null, MAX_RESULTS);
 
       // then
       final int expected = 3;
@@ -930,7 +918,7 @@ public class DocumentSearchServiceImplTest {
       assertNotNull(list.get(i).getDocumentId());
       assertEquals("aaaa", list.get(i++).getPath());
       assertEquals("Chicago", list.get(i++).getPath());
-      assertEquals("abc.pdf", list.get(i++).getPath());
+      assertEquals("abc.pdf", list.get(i).getPath());
     }
   }
 
@@ -941,23 +929,22 @@ public class DocumentSearchServiceImplTest {
    */
   @Test
   public void testSearch17() throws ValidationException {
-    for (String siteId : Arrays.asList(null, UUID.randomUUID().toString())) {
+    for (String siteId : Arrays.asList(null, ID.uuid())) {
       // given
-      DocumentItem doc0 = new DocumentItemDynamoDb(UUID.randomUUID().toString(), new Date(), "joe");
+      DocumentItem doc0 = new DocumentItemDynamoDb(ID.uuid(), new Date(), "joe");
       doc0.setPath("/a/b/test2.pdf");
       this.service.saveDocument(siteId, doc0, null);
 
       doc0.setPath("/c/b/test3.pdf");
       this.service.saveDocument(siteId, doc0, null);
 
-      PaginationMapToken startkey = null;
       String folder = "";
       SearchMetaCriteria meta = new SearchMetaCriteria();
       SearchQuery q = new SearchQuery().meta(meta.folder(folder));
 
       // when
       PaginationResults<DynamicDocumentItem> results =
-          this.searchService.search(siteId, q, null, startkey, MAX_RESULTS);
+          this.searchService.search(siteId, q, null, null, MAX_RESULTS);
 
       // then
       List<DynamicDocumentItem> list = results.getResults();
@@ -966,7 +953,7 @@ public class DocumentSearchServiceImplTest {
       assertEquals("c", list.get(1).getPath());
 
       meta.folder("a/b");
-      results = this.searchService.search(siteId, q, null, startkey, MAX_RESULTS);
+      results = this.searchService.search(siteId, q, null, null, MAX_RESULTS);
       list = results.getResults();
       assertEquals(0, list.size());
     }
@@ -979,20 +966,19 @@ public class DocumentSearchServiceImplTest {
    */
   @Test
   public void testSearch18() throws ValidationException {
-    for (String siteId : Arrays.asList(null, UUID.randomUUID().toString())) {
+    for (String siteId : Arrays.asList(null, ID.uuid())) {
       // given
       String path = "/a/b/test2.pdf";
-      DocumentItem doc = new DocumentItemDynamoDb(UUID.randomUUID().toString(), new Date(), "joe");
+      DocumentItem doc = new DocumentItemDynamoDb(ID.uuid(), new Date(), "joe");
       doc.setPath(path);
       this.service.saveDocument(siteId, doc, null);
 
-      PaginationMapToken startkey = null;
       SearchMetaCriteria meta = new SearchMetaCriteria();
       SearchQuery q = new SearchQuery().meta(meta.path(path));
 
       // when
       PaginationResults<DynamicDocumentItem> results =
-          this.searchService.search(siteId, q, null, startkey, MAX_RESULTS);
+          this.searchService.search(siteId, q, null, null, MAX_RESULTS);
 
       // then
       List<DynamicDocumentItem> list = results.getResults();
@@ -1001,11 +987,11 @@ public class DocumentSearchServiceImplTest {
       assertEquals(doc.getPath(), list.get(0).getPath());
 
       // given - invalid path
-      path = UUID.randomUUID().toString();
+      path = ID.uuid();
       q = new SearchQuery().meta(meta.path(path));
 
       // when
-      results = this.searchService.search(siteId, q, null, startkey, MAX_RESULTS);
+      results = this.searchService.search(siteId, q, null, null, MAX_RESULTS);
 
       // then
       assertEquals(0, results.getResults().size());
@@ -1019,9 +1005,8 @@ public class DocumentSearchServiceImplTest {
    */
   @Test
   public void testSearchForDocumentIds01() throws ValidationException {
-    for (String siteId : Arrays.asList(null, UUID.randomUUID().toString())) {
+    for (String siteId : Arrays.asList(null, ID.uuid())) {
       // given
-      PaginationMapToken startkey = null;
       final String documentId0 = createDocument(siteId, "category", "person0");
       final String documentId1 = createDocument(siteId, "category", "person1");
       createDocument(siteId, "category", "other");
@@ -1030,7 +1015,7 @@ public class DocumentSearchServiceImplTest {
 
       // when
       PaginationResults<String> results =
-          this.searchService.searchForDocumentIds(siteId, c, startkey, MAX_RESULTS);
+          this.searchService.searchForDocumentIds(siteId, c, null, MAX_RESULTS);
 
       // then
       assertEquals(1, results.getResults().size());
@@ -1041,7 +1026,7 @@ public class DocumentSearchServiceImplTest {
       c = new SearchTagCriteria("category").beginsWith("per");
 
       // when
-      results = this.searchService.searchForDocumentIds(siteId, c, startkey, MAX_RESULTS);
+      results = this.searchService.searchForDocumentIds(siteId, c, null, MAX_RESULTS);
 
       // then
       assertNull(results.getToken());
@@ -1058,7 +1043,7 @@ public class DocumentSearchServiceImplTest {
    */
   @Test
   public void testSearch19() throws ValidationException {
-    for (String siteId : Arrays.asList(null, UUID.randomUUID().toString())) {
+    for (String siteId : Arrays.asList(null, ID.uuid())) {
       // given
       final String documentId0 = createDocument(siteId, "date", "2024-03-19T02:45:04+0000");
       final String documentId1 = createDocument(siteId, "date", "2024-03-20T02:45:04+0000");
@@ -1081,12 +1066,11 @@ public class DocumentSearchServiceImplTest {
 
   /**
    * Search by duplicate attributes.
-   * 
-   * @throws ValidationException ValidationException
+   *
    */
   @Test
-  public void testSearch20() throws ValidationException {
-    for (String siteId : Arrays.asList(null, UUID.randomUUID().toString())) {
+  public void testSearch20() {
+    for (String siteId : Arrays.asList(null, ID.uuid())) {
       // given
       SearchAttributeCriteria a0 = new SearchAttributeCriteria().key("category").eq("person");
       SearchQuery q = new SearchQuery().attributes(Arrays.asList(a0, a0));
