@@ -27,16 +27,15 @@ import static com.formkiq.testutils.aws.DynamoDbExtension.DOCUMENTS_TABLE;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import java.io.ByteArrayInputStream;
 import java.io.ByteArrayOutputStream;
-import java.io.IOException;
 import java.io.InputStream;
-import java.net.URISyntaxException;
 import java.nio.charset.StandardCharsets;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.UUID;
+
+import com.formkiq.aws.dynamodb.ID;
 import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -71,18 +70,13 @@ class ApiKeyAuthorizerRequestHandlerTest {
   private static final Gson GSON = new GsonBuilder().create();
   /** {@link ApiKeyAuthorizerRequestHandler}. */
   private static ApiKeyAuthorizerRequestHandler processor;
-  /** {@link AwsServiceCache}. */
-  private static AwsServiceCache awsServices;
 
   /**
    * Before Class.
    *
-   * @throws URISyntaxException URISyntaxException
-   * @throws InterruptedException InterruptedException
-   * @throws IOException IOException
    */
   @BeforeAll
-  public static void beforeClass() throws URISyntaxException, InterruptedException, IOException {
+  public static void beforeClass() {
 
     Map<String, String> env = new HashMap<>();
     env.put("AWS_REGION", Region.US_EAST_1.id());
@@ -91,7 +85,7 @@ class ApiKeyAuthorizerRequestHandlerTest {
     AwsCredentials creds = AwsBasicCredentials.create("aaa", "bbb");
     StaticCredentialsProvider credentialsProvider = StaticCredentialsProvider.create(creds);
 
-    awsServices =
+    AwsServiceCache awsServices =
         new AwsServiceCacheBuilder(env, TestServices.getEndpointMap(), credentialsProvider)
             .addService(new DynamoDbAwsServiceRegistry()).build();
 
@@ -100,14 +94,13 @@ class ApiKeyAuthorizerRequestHandlerTest {
   }
 
   /** {@link Context}. */
-  private Context context = new LambdaContextRecorder();
+  private final Context context = new LambdaContextRecorder();
 
   private InputStream getInput(final String apiKey) {
-    List<String> identitySource = apiKey != null ? Arrays.asList(apiKey) : Collections.emptyList();
+    List<String> identitySource = apiKey != null ? List.of(apiKey) : Collections.emptyList();
     String json = GSON.toJson(Map.of("type", "REQUEST", "identitySource", identitySource));
 
-    InputStream is = new ByteArrayInputStream(json.getBytes(StandardCharsets.UTF_8));
-    return is;
+    return new ByteArrayInputStream(json.getBytes(StandardCharsets.UTF_8));
   }
 
   /**
@@ -119,7 +112,7 @@ class ApiKeyAuthorizerRequestHandlerTest {
   @Test
   void testHandleRequest01() throws Exception {
     // given
-    String apiKey = UUID.randomUUID().toString();
+    String apiKey = ID.uuid();
 
     try (InputStream is = getInput(apiKey)) {
 
@@ -129,7 +122,7 @@ class ApiKeyAuthorizerRequestHandlerTest {
       processor.handleRequest(is, os, this.context);
 
       // then
-      String response = new String(os.toByteArray(), "UTF-8");
+      String response = os.toString(StandardCharsets.UTF_8);
       Map<String, Object> map = GSON.fromJson(response, Map.class);
       assertEquals(Boolean.FALSE, map.get("isAuthorized"));
       Map<String, Object> ctx = (Map<String, Object>) map.get("context");
@@ -149,9 +142,9 @@ class ApiKeyAuthorizerRequestHandlerTest {
   @Test
   void testHandleRequest02() throws Exception {
     // given
-    for (String siteId : Arrays.asList(null, UUID.randomUUID().toString())) {
+    for (String siteId : Arrays.asList(null, ID.uuid())) {
 
-      String name = UUID.randomUUID().toString();
+      String name = ID.uuid();
 
       String apiKey = apiKeysService.createApiKey(siteId, name,
           Arrays.asList(ApiKeyPermission.READ, ApiKeyPermission.WRITE, ApiKeyPermission.DELETE),
@@ -165,7 +158,7 @@ class ApiKeyAuthorizerRequestHandlerTest {
         processor.handleRequest(is, os, this.context);
 
         // then
-        String response = new String(os.toByteArray(), "UTF-8");
+        String response = os.toString(StandardCharsets.UTF_8);
         Map<String, Object> map = GSON.fromJson(response, Map.class);
         assertEquals(Boolean.TRUE, map.get("isAuthorized"));
 
@@ -201,7 +194,7 @@ class ApiKeyAuthorizerRequestHandlerTest {
       processor.handleRequest(is, os, this.context);
 
       // then
-      String response = new String(os.toByteArray(), "UTF-8");
+      String response = os.toString(StandardCharsets.UTF_8);
       Map<String, Object> map = GSON.fromJson(response, Map.class);
       assertEquals(Boolean.FALSE, map.get("isAuthorized"));
 
@@ -233,7 +226,7 @@ class ApiKeyAuthorizerRequestHandlerTest {
       processor.handleRequest(is, os, this.context);
 
       // then
-      String response = new String(os.toByteArray(), "UTF-8");
+      String response = os.toString(StandardCharsets.UTF_8);
       Map<String, Object> map = GSON.fromJson(response, Map.class);
       assertEquals(Boolean.FALSE, map.get("isAuthorized"));
       Map<String, Object> ctx = (Map<String, Object>) map.get("context");
